アイコン,メモ,編集画面表示

--- a/realm_app/realm_app/Info.plist
+++ b/realm_app/realm_app/Info.plist
@@ -30,7 +30,7 @@
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIImageName</key>
-		<string>kan2_200</string>
+		<string>200</string>
 		<key>UIColorName</key>
 		<string>bg</string>
 	</dict>
